fixed bug where decks would not update on mobile when adding a new deck

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,11 @@ h1 {
   font-family: 'Philosopher', sans-serif;
 }
 
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
 #active {
   border: 1px solid yellow;
 }
@@ -32,8 +37,10 @@ h1 {
 
 .tab-content {
   margin-top: 1rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .tab-view {
